# PracticeAlgorithm

./: CMakeLists.txt  main.cpp
Astar/: Astar.h  Astar_main.cpp
Codeup/: 10.3-1798-ProblemA.cpp  10.3-1908-ProblemB.cpp  10.4-1768-ProblemA.cpp  10.4-1769-ProblemB.cpp  10.4-ProblemC.cpp  10.4-ProblemE.cpp  10.4-problemD.cpp  10.5-ProblemA.cpp  10.5-ProblemB.cpp  10.5-ProblemC.cpp  10.5-ProblemD.cpp  10.5-ProblemE-JungleRoads.cpp  9.6-1106-problemA.cpp  9.6-1953-problemB.cpp  A+B.cpp  A+BC.cpp  BeUnique.cpp  BigApha.cpp  BigDecimal.cpp  BinaryTreeTraveral.cpp  DFSorBFS.cpp  DayOfWeek.cpp  NQueen.cpp  OddAndEven.cpp  ShortestDistance.cpp  StringSubtraction.cpp  Stu.cpp  ToFillorNottoFill.cpp  addCalculate.cpp  addOneDay.cpp  alterWord.cpp  anotherA+B.cpp  arrangeNumber.cpp  arrangeString.cpp  binaryTree.cpp  combineAndPrimeNumber.cpp  compare2string.cpp  connectString.cpp  cube.cpp  deleteAlpha.cpp  (+56 more)
Futoshiki/: Futoshiki_puzzle.cpp  forwardChecking.cpp  forward_checking_version2.cpp
LUOGU/: A+BProblem.cpp  P1012.cpp  P1019.cpp  P1030.cpp  P1032.cpp  P1035.cpp  P1071.cpp  P1085.cpp  P1087.cpp  P1089.cpp  P1101.cpp  P1115.cpp  P1141.cpp  P1160.cpp  P1162.cpp  P1219.cpp  P1265.cpp  P1305.cpp  P1339.cpp  P1421.cpp  P1422.cpp  P1423.cpp  P1424.cpp  P1425.cpp  P1443.cpp  P1449.cpp  P1538.cpp  P1546.cpp  P1603.cpp  P1605.cpp  P1739.cpp  P1909.cpp  P1980.cpp  P1991.cpp  P1996.cpp  P2330.cpp  P2661.cpp  P5018.cpp  marygame.cpp
Leecode/:  LCP 03.cpp  102.cpp  1020.cpp  104.cpp  1042.cpp  106.cpp  107.cpp  11.cpp  110.cpp  111.cpp  1129.cpp  1144.cpp  1161.cpp  1162.cpp  124.cpp  1254.cpp  1263.cpp  1267.cpp  130.cpp  1301.cpp  1302.cpp  1306.cpp  1319.cpp  1332.cpp  1333.cpp  1334.cpp  1337.cpp  1343.cpp  1352.cpp  1361.cpp  1368.cpp  1372.cpp  1387.cpp  1391.cpp  1414.cpp  1457.cpp  1462.cpp  1514.cpp  1519.cpp  1535.cpp  (+54 more)
PAT/: 1002.cpp  1003.cpp  1004.cpp  1005.cpp  1006.cpp  1007.cpp  1008.cpp  1009.cpp  1010.cpp  1011.cpp  1012.cpp  1013.cpp  1014.cpp  1015.cpp  1016.cpp  1020.cpp  1022.cpp  1023.cpp  1032.cpp  A1001.cpp  A1002.cpp  A1003.cpp  A1004.cpp  A1005.cpp  A1006.cpp  A1007.cpp  A1008.cpp  A1009.cpp  A1010.cpp  A1011.cpp  A1012.cpp  A1013.cpp  A1015.cpp  A1018.cpp  A1019.cpp  A1020.cpp  A1021.cpp  A1022.cpp  A1023.cpp  A1025.cpp  (+42 more)
