cmake_minimum_required(VERSION 3.15)
project(PracticeAlgorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(PracticeAlgorithm main.cpp)
add_executable(MaryGame LUOGU/marygame.cpp)
add_executable(A+B LUOGU/A+BProblem.cpp)
add_executable(1002 PAT/1002.cpp)
add_executable(1003 PAT/1003.cpp)
add_executable(1004 PAT/1004.cpp)
add_executable(1005 PAT/1005.cpp)
add_executable(1006 PAT/1006.cpp)
add_executable(1007 PAT/1007.cpp)
add_executable(1008 PAT/1008.cpp)
add_executable(1009 PAT/1009.cpp)
add_executable(1010 PAT/1010.cpp)
add_executable(1011 PAT/1011.cpp)
add_executable(1012 PAT/1012.cpp)
add_executable(1013 PAT/1013.cpp)
add_executable(1014 PAT/1014.cpp)
add_executable(1015 PAT/1015.cpp)
add_executable(1032 PAT/1032.cpp)
add_executable(1023 PAT/1023.cpp)
add_executable(1020 PAT/1020.cpp)
add_executable(A1043 PAT/A1043.cpp)
add_executable(tree Codeup/lastTree.cpp)
add_executable(CodeupA+B Codeup/A+B.cpp)
add_executable(special Codeup/special.cpp)
add_executable(oe Codeup/OddAndEven.cpp)
add_executable(shortestDistance Codeup/ShortestDistance.cpp)
add_executable(ABC Codeup/A+B>C.cpp)
add_executable(number Codeup/numberClassify.cpp)
add_executable(AB Codeup/partialA+B.cpp)
add_executable(CBJ Codeup/stoneno.cpp)
add_executable(findX Codeup/findX.cpp)
add_executable(findStu Codeup/findStu.cpp)
add_executable(find Codeup/find.cpp)
add_executable(stu Codeup/Stu.cpp)
add_executable(Cube Codeup/cube.cpp)
add_executable(Ladder Codeup/ladder.cpp)
add_executable(U Codeup/printU.cpp)
add_executable(goodladder Codeup/goodladder.cpp)
add_executable(triggle Codeup/triggle.cpp)
add_executable(day Codeup/minusDay.cpp)
add_executable(DayOfWeek Codeup/DayOfWeek.cpp)
add_executable(printDay Codeup/printDay.cpp)
add_executable(test Codeup/addOneDay.cpp)
add_executable(addCalculate Codeup/addCalculate.cpp)
add_executable(1022 PAT/1022.cpp)
add_executable(another Codeup/anotherA+B.cpp)
add_executable(exchangeNumber Codeup/exchangeNumber.cpp)
add_executable(two Codeup/exchangeTwo.cpp)
add_executable(BigDecimal Codeup/BigDecimal.cpp)
add_executable(Eight Codeup/eight.cpp)
add_executable(connectString Codeup/connectString.cpp)
add_executable(BigAlpha Codeup/BigApha.cpp)
add_executable(deleteAlpha Codeup/deleteAlpha.cpp)
add_executable(alterWord Codeup/alterWord.cpp)
add_executable(deleteChar Codeup/deleteChar.cpp)
add_executable(reverseArray Codeup/reverseArray.cpp)
add_executable(compare2string Codeup/compare2string.cpp)
add_executable(arrangeString Codeup/arrangeString.cpp)
add_executable(frontAndbackString Codeup/frontAndbackString.cpp)
add_executable(A1025 PAT/A1025.cpp)
add_executable(sort Codeup/sort.cpp)
add_executable(specialSort Codeup/specialSort.cpp)
add_executable(excelSort Codeup/excelSort.cpp)
add_executable(stringSort Codeup/stringSort.cpp)
add_executable(metric Codeup/metricSort.cpp)
add_executable(rat Codeup/rat.cpp)
add_executable(oddevenSort Codeup/oddevenSort.cpp)
add_executable(whoseFriends Codeup/whoseFirends.cpp)
add_executable(BeUnique Codeup/BeUnique.cpp)
add_executable(StringSubtraction Codeup/StringSubtraction.cpp)
add_executable(eatCandy Codeup/eatCandy.cpp)
add_executable(series Codeup/series.cpp)
add_executable(specialPacket Codeup/specialPacket.cpp)
add_executable(eightQueen Codeup/eightQueen.cpp)
add_executable(watchTV Codeup/watchTV.cpp)
add_executable(pay Codeup/payCharge.cpp)
add_executable(ToFillorNottoFill Codeup/ToFillorNottoFill.cpp)
add_executable(simplyCalculate Codeup/simplyCalculate.cpp)
add_executable(stack_problemE Codeup/problemE.cpp)
add_executable(exchange_number Codeup/exchange_Number.cpp)
add_executable(linklist Codeup/linklistOption.cpp)
add_executable(sortLinklist Codeup/sortLinklist.cpp)
add_executable(mergeList Codeup/mergeList.cpp)
add_executable(quaryList Codeup/quaryList.cpp)
add_executable(reverseList Codeup/reverseList.cpp)
add_executable(deletduplication Codeup/deleteDuplicationList.cpp)
add_executable(A1032 PAT/A1032.cpp)
add_executable(arrangeNumber Codeup/arrangeNumber.cpp)
add_executable(outputCombine Codeup/outputCombine.cpp)
add_executable(combinePrimeNumber Codeup/combineAndPrimeNumber.cpp)
add_executable(Nqueen Codeup/NQueen.cpp)
add_executable(squenceOfStack Codeup/squenceOfStack.cpp)
add_executable(maze Codeup/maze.cpp)
add_executable(DFSorBFS Codeup/DFSorBFS.cpp)
add_executable(eightNumberCode Codeup/eightNumberCode.cpp)
add_executable(magicCube Codeup/magicCube.cpp)
add_executable(pourWater Codeup/pourWater.cpp)
add_executable(pourWater2 Codeup/pourWater_version2.cpp)
add_executable(A1020 PAT/A1020.cpp)
add_executable(rebuildTree Codeup/rebuildTree.cpp)
add_executable(binaryTree Codeup/binaryTree.cpp)
add_executable(preAndInPost Codeup/preAndInToPost.cpp)
add_executable(BinaryTreeTraversal Codeup/BinaryTreeTraveral.cpp)
add_executable(searchTree Codeup/searchTree.cpp)
add_executable(getDepth Codeup/getDepth.cpp)
add_executable(sortTree Codeup/sortTree.cpp)
add_executable(sortTree2 Codeup/sortTree2.cpp)
add_executable(1106ProblemA Codeup/9.6-1106-problemA.cpp)
add_executable(1953ProblemB Codeup/9.6-1953-problemB.cpp)
add_executable(1798ProblemA Codeup/10.3-1798-ProblemA.cpp)
add_executable(1908ProblemB Codeup/10.3-1908-ProblemB.cpp)
add_executable(1768ProblemA Codeup/10.4-1768-ProblemA.cpp)
add_executable(1769ProblemB Codeup/10.4-1769-ProblemB.cpp)
add_executable(ProblemC Codeup/10.4-ProblemC.cpp)
add_executable(ProblemD Codeup/10.4-problemD.cpp)
add_executable(ProblemE Codeup/10.4-ProblemE.cpp)
add_executable(P2661 LUOGU/P2661.cpp)
add_executable(10.5ProblemA Codeup/10.5-ProblemA.cpp)
add_executable(10.5ProblemB Codeup/10.5-ProblemB.cpp)
add_executable(10.5ProblemC Codeup/10.5-ProblemC.cpp)
add_executable(10.5ProblemD Codeup/10.5-ProblemD.cpp)
add_executable(10.5ProblemE Codeup/10.5-ProblemE-JungleRoads.cpp)
add_executable(P1421 LUOGU/P1421.cpp)
add_executable(P1425 LUOGU/P1425.cpp)
add_executable(P1422 LUOGU/P1422.cpp)
add_executable(P1085 LUOGU/P1085.cpp)
add_executable(P1089 LUOGU/P1089.cpp)
add_executable(P1909 LUOGU/P1909.cpp)
add_executable(P1035 LUOGU/P1035.cpp)
add_executable(P1423 LUOGU/P1423.cpp)
add_executable(P1424 LUOGU/P1424.cpp)
add_executable(P1980 LUOGU/P1980.cpp)
add_executable(1016 PAT/1016.cpp)
add_executable(A1001 PAT/A1001.cpp)
add_executable(P1603 LUOGU/P1603.cpp)
add_executable(P1071 LUOGU/P1071.cpp)
add_executable(P1012 LUOGU/P1012.cpp)
add_executable(P1538 LUOGU/P1538.cpp)
add_executable(P1219 LUOGU/P1219.cpp)
add_executable(P1019 LUOGU/P1019.cpp)
add_executable(P1605 LUOGU/P1605.cpp)
add_executable(P1101 LUOGU/P1101.cpp)
add_executable(P1162 LUOGU/P1162.cpp)
add_executable(P1032 LUOGU/P1032.cpp)
add_executable(P1141 LUOGU/P1141.cpp)
add_executable(P1443 LUOGU/P1443.cpp)
add_executable(P1996 LUOGU/P1996.cpp)
add_executable(P1115 LUOGU/P1115.cpp)
add_executable(P1739 LUOGU/P1739.cpp)
add_executable(P1160 LUOGU/P1160.cpp)
add_executable(P1449 LUOGU/P1449.cpp)
add_executable(P1087 LUOGU/P1087.cpp)
add_executable(P1030 LUOGU/P1030.cpp)
add_executable(P1305 LUOGU/P1305.cpp)
add_executable(P5018 LUOGU/P5018.cpp)
add_executable(P1339 LUOGU/P1339.cpp)
add_executable(P1546 LUOGU/P1546.cpp)
add_executable(P2330 LUOGU/P2330.cpp)
add_executable(P1265 LUOGU/P1265.cpp)
add_executable(P1991 LUOGU/P1991.cpp)
add_executable(A1136 PAT/A1136.cpp)
add_executable(A1139 PAT/A1139.cpp)
add_executable(A1143 PAT/A1143.cpp)
add_executable(A1148 PAT/A1148.cpp)
add_executable(A1005 PAT/A1005.cpp)
add_executable(A1035 PAT/A1035.cpp)
add_executable(A1061 PAT/A1061.cpp)
add_executable(A1073 PAT/A1073.cpp)
add_executable(A1077 PAT/A1077.cpp)
add_executable(A1108 PAT/A1108.cpp)
add_executable(A1140 PAT/A1140.cpp)
add_executable(A1152 PAT/A1152.cpp)
add_executable(A1002 PAT/A1002.cpp)
add_executable(A1009 PAT/A1009.cpp)
add_executable(A1110 PAT/A1110.cpp)
add_executable(A1064 PAT/A1064.cpp)
add_executable(A1099 PAT/A1099.cpp)
add_executable(A1053 PAT/A1053.cpp)
add_executable(A1086 PAT/A1086.cpp)
add_executable(A1090 PAT/A1090.cpp)
add_executable(A1102 PAT/A1102.cpp)
add_executable(A1106 PAT/A1106.cpp)
add_executable(A1115 PAT/A1115.cpp)
add_executable(A1119 PAT/A1119.cpp)
add_executable(A1038 PAT/A1038.cpp)
add_executable(A1147 PAT/A1147.cpp)
add_executable(A1151 PAT/A1151.cpp)
add_executable(A1122 PAT/A1122.cpp)
add_executable(A1142 PAT/A1142.cpp)
add_executable(A1150 PAT/A1150.cpp)
add_executable(A1126 PAT/A1126.cpp)
add_executable(A1013 PAT/A1013.cpp)
add_executable(A1021 PAT/A1021.cpp)
add_executable(A1034 PAT/A1034.cpp)
add_executable(A1003 PAT/A1003.cpp)
add_executable(A1018 PAT/A1018.cpp)
add_executable(A1030 PAT/A1030.cpp)
add_executable(A1087 PAT/A1087.cpp)
add_executable(A1111 PAT/A1111.cpp)
add_executable(A1004 PAT/A1004.cpp)
add_executable(A1076 PAT/A1076.cpp)
add_executable(A1079 PAT/A1079.cpp)
add_executable(A1094 PAT/A1094.cpp)
add_executable(A1103 PAT/A1103.cpp)
add_executable(A1127 PAT/A1127.cpp)
add_executable(A1130 PAT/A1130.cpp)
add_executable(A1131 PAT/A1131.cpp)
add_executable(A1006 PAT/A1006.cpp)
add_executable(A1007 PAT/A1007.cpp)
add_executable(A1008 PAT/A1008.cpp)
add_executable(A1048 PAT/A1048.cpp)
add_executable(A1010 PAT/A1010.cpp)
add_executable(A1011 PAT/A1011.cpp)
add_executable(A1012 PAT/A1012.cpp)